<resources>
    <string name="app_name">Keep</string>
    <string name="recipes">Recipes</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_email">Sign up with email</string>
    <string name="login">Login</string>
    <string name="LOGIN">LOGIN</string>
    <string name="login_email">Login with email</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="sign_up_with_google">Sign up with Google</string>
    <string name="profile_about_string">I really love pizza.  Wanna learn how to make some?</string>
    <string-array name="photo_import_options">
        <item name="take_photo">Take New Image</item>
        <item name="choose_photo">Choose Image</item>
    </string-array>
    <string name="menu_login">Log in</string>
    <string name="menu_logout">Log out</string>
    <string name="login_label">Log In</string>
    <string name="email_label">Email</string>
    <string name="password_label">Password</string>
    <string name="send_text">Send</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean nec condimentum ante, quis mattis mi. Proin ut rhoncus libero, ac euismod neque. Ut suscipit, enim a facilisis consequat, orci lacus venenatis orci, at ultricies orci nulla sed ex. In condimentum viverra velit, eget feugiat libero imperdiet vel. Aenean pretium, lectus vitae bibendum bibendum, diam turpis convallis eros, quis tristique leo sapien at ipsum. Praesent eu odio id nulla lobortis auctor. Donec eget dolor eget nisl euismod commodo vel a lacus. Quisque ut justo vitae urna pharetra accumsan. Etiam dignissim neque iaculis mauris viverra, blandit rhoncus odio porttitor. Phasellus nibh arcu.</string>
    <string name="title_sign_in">Welcome</string>
    <string name="hint_password">password</string>
    <string name="hint_email">email</string>
    <string name="sign_in">Sign In</string>
    <string name="heading_recent">Recent</string>
    <string name="heading_my_posts">My Posts</string>
    <string name="heading_my_top_posts">My Top Posts</string>


    <!-- Font -->
    <string name="roboto_regular">sans-serif</string>
    <string name="roboto_light">sans-serif-light</string>
    <string name="roboto_condensed">sans-serif-condensed</string>
    <string name="roboto_thin">sans-serif-thin</string>
    <string name="roboto_medium">sans-serif-medium</string>

    <string name="number_picker_formatter">%02d</string>
    <string name="edit_profile">Edit Profile</string>

    <string name="recipe_add_edit_privacy_public">Public</string>
    <string name="recipe_add_edit_privacy_private">Private</string>
    <string name="recipe_add_edit_privacy_default">Public</string>
    <string name="profile_button_follow">Follow</string>
    <string name="nav_item_add">Add</string>
    <string name="edit_recipe">Edit Recipe</string>

    <string name="edittext_username_digits">0,1,2,3,4,5,6,7,8,9,abcdefghijklmnopqrstuvwxyz,ABCDEFGHIJKLMNOPQRSTUVWXYZ,_,</string>

</resources>
