<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Authentication.SignUp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="@color/colorAccent">


        <TextView
            android:id="@+id/login_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="50sp" />

        <EditText
            android:id="@+id/login_et_email"
            android:layout_width="match_parent"
            android:layout_marginTop="16dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/login_et_password"
            android:layout_width="match_parent"
            android:paddingVertical="16dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/login_button_login"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_email"
            android:textAlignment="center"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorWhite"
            android:textStyle="bold" />

        <Button
            android:id="@+id/login_button_signup"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_marginVertical="16dp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorWhite"
            android:text="@string/sign_up"
            android:textAlignment="center"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/login_password_reset"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:paddingVertical="16dp"
            android:textSize="12sp"
            android:layout_height="wrap_content"
            android:text="Forgot Password" />

        <TextView
            android:padding="8dp"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="OR"/>

        <com.shobhitpuri.custombuttons.GoogleSignInButton
            android:id="@+id/login_button_google"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_height="wrap_content"
            app:isDarkTheme="true">

        </com.shobhitpuri.custombuttons.GoogleSignInButton>




    </LinearLayout>
</FrameLayout>