<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.ProfileFragment"
    android:background="#CDCDCD">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
            <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                          <de.hdodenhof.circleimageview.CircleImageView
                              android:id="@+id/frag_profile_image"
                              android:layout_width="130dp"
                              android:layout_height="130dp"
                              android:layout_marginBottom="16dp"
                              android:layout_marginTop="32dp"
                              android:layout_gravity="center"
                              android:scaleType="centerCrop"
                              app:civ_border_width="3dp"
                              android:clickable="true"
                              android:focusable="true"
                              android:foreground="?android:attr/selectableItemBackground"
                              app:civ_border_color="@color/colorPrimary"
                              android:src="@mipmap/ic_launcher_round"
                              app:srcCompat="@mipmap/ic_launcher" />
                          <TextView
                              android:id="@+id/frag_profile_name"
                              android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                              android:layout_marginBottom="4dp"
                              android:textColor="@android:color/black"
                              android:textSize="19sp"
                              android:textStyle="bold"
                              android:layout_gravity="center"
                              android:text="John Smith" />

                          <TextView
                              android:id="@+id/frag_profile_about"
                              android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              android:gravity="center"
                              android:textColor="@android:color/black"
                              android:layout_marginBottom="20dp"
                              android:textSize="19sp"
                              android:paddingLeft="8dp"
                              android:paddingRight="8dp"
                              android:text="@string/profile_about_string" />
                            </LinearLayout>

                <LinearLayout
                    android:visibility="visible"
                    android:id="@+id/profile_linear_user_options"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="1.0">

                    <Button
                        android:layout_weight=".5"
                        android:clickable="true"
                        android:focusable="true"
                        android:backgroundTint="@color/colorPrimaryDark"
                        android:textColor="@android:color/white"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:id="@+id/profile_button_editprofile"
                        android:text="@string/edit_profile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"/>

                    <Button
                        android:layout_weight=".5"
                        android:clickable="true"
                        android:focusable="true"
                        android:backgroundTint="@color/colorPrimaryDark"
                        android:textColor="@android:color/white"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:id="@+id/profile_button_settings"
                        android:text="@string/settings"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"/>
                </LinearLayout>
                <LinearLayout
                    android:visibility="gone"
                    android:id="@+id/profile_linear_follow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ToggleButton
                        android:checked="false"
                        android:clickable="true"
                        android:focusable="true"
                        android:id="@+id/profile_button_follow"
                        android:textOff="follow"
                        android:textOn="Following"
                        android:textColor="@android:color/white"
                        android:foreground="?attr/selectableItemBackground"
                        android:backgroundTint="@color/colorPrimary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"/>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="2"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:layout_gravity="center_vertical"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:weightSum="2"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/frag_profile_recipes_followers_tv"
                            android:layout_width="wrap_content"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:textColor="#2d2d2d"
                            android:textSize="15sp"
                            android:textStyle="bold"
                            android:text="Followers" />

                        <TextView
                            android:id="@+id/frag_profile_recipes_followers_count"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#2d2d2d"
                            android:textSize="25sp"
                            android:textStyle="bold"
                            android:layout_weight="1"
                            android:text="2" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:weightSum="2"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/frag_profile_recipes_count_tv"
                            android:layout_width="wrap_content"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:textColor="#2d2d2d"
                            android:textSize="15sp"
                            android:textStyle="bold"
                            android:text="Recipes" />

                        <TextView
                            android:id="@+id/frag_profile_recipes_count"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#2d2d2d"
                            android:textSize="25sp"
                            android:textStyle="bold"
                            android:layout_weight="1"
                            android:text="4" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.recyclerview.widget.RecyclerView
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:paddingRight="4dp"
            android:paddingLeft="4dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/profile_user_recipes_rv"
            tools:itemCount="20"
            android:layout_gravity="center_vertical"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="3"
            tools:listitem="@layout/list_recipe_user_profile_item"/>

    </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</FrameLayout>