<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/recipe_add_LinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2d2d2d2d"
    android:fitsSystemWindows="false"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:orientation="vertical"
                android:id="@+id/recipe_add_cv_imageTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="2dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/recipe_add_imagview"
                        android:layout_width="match_parent"
                        android:layout_height="250dp"
                        android:background="#2d2d2d2d"
                        android:scaleType="centerCrop"
                        android:src="@drawable/keep_recipe_add_image_gray_resource"/>


                    <EditText
                        android:hint="Add Title..."
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/recipe_add_title_et"
                        android:padding="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginStart="16dp"
                        android:textSize="15sp"/>




                    <EditText
                        android:hint="Add Description..."
                        android:textSize="15sp"
                        android:id="@+id/recipe_add_desc_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginStart="16dp"
                        android:maxLines="5" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="1.0">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/recipe_prepTime_Image"
                            android:layout_width="80dp"
                            android:layout_gravity="center"
                            android:layout_height="40dp"
                            android:layout_marginStart="16dp"
                            android:src="@drawable/ic_prep_time"
                            android:layout_weight=".1"/>
                        <Button
                            android:text="Add Prep Time..."
                            android:layout_weight=".9"
                            android:layout_gravity="center"
                            android:id="@+id/recipe_add_prepTime_et"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="15sp"
                            android:textAppearance="@style/TextAppearance.AppCompat.Large"
                            android:paddingEnd="10dp"
                            android:layout_marginTop="16dp"
                            android:layout_marginBottom="16dp"
                            android:layout_marginEnd="16dp"
                            android:maxLines="4" />
                    </LinearLayout>



                        <Switch
                            android:clickable="true"
                            android:focusable="true"
                            android:checked="false"
                            android:textOn="@string/recipe_add_edit_privacy_private"
                            android:textOff="@string/recipe_add_edit_privacy_public"
                            android:text="@string/recipe_add_edit_privacy_default"
                            android:id="@+id/recipe_add_edit_privacy_switch"
                            android:paddingStart="70dp"
                            android:paddingEnd="4dp"
                            android:paddingTop="16dp"
                            android:paddingBottom="16dp"
                            android:layout_weight=".5"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingEnd="8dp"
                    android:weightSum="1.0">
                    <EditText
                        android:inputType="text"
                        android:windowSoftInputMode="adjustResize"
                        android:layout_weight=".7"
                        android:layout_margin="16dp"
                        android:textColor="@android:color/black"
                        android:hint="Add Ingredient..."
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/recipe_add_et_ingred"
                        android:imeOptions="actionDone"/>
                    <Button
                        android:id="@+id/recipe_add_edit_et_ingred_add"
                        android:layout_gravity="center_vertical"
                        android:layout_weight=".15"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="+"/>
                    <Button
                        android:id="@+id/recipe_add_edit_et_ingred_remove"
                        android:layout_gravity="center_vertical"
                        android:layout_weight=".15"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="-"/>
                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dp"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:textColor="@android:color/black"
                    android:paddingTop="10dp"
                    android:paddingLeft="15dp"
                    android:text="Ingredients"
                    />
                <androidx.recyclerview.widget.RecyclerView
                    android:padding="8dp"
                    android:id="@+id/recipe_rv_ingredients"
                    tools:listitem="@layout/list_item_recipe_ingredient"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="1.0">
                    <EditText
                        android:inputType="text"
                        android:windowSoftInputMode="adjustResize"
                        android:layout_weight=".7"
                        android:layout_margin="16dp"
                        android:textColor="@android:color/black"
                        android:hint="Add Step..."
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/recipe_add_et_step"
                        android:imeOptions="actionDone"/>
                    <Button
                        android:id="@+id/recipe_add_edit_et_steps_add"
                        android:layout_gravity="center_vertical"
                        android:layout_weight=".15"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="+"/>
                    <Button
                        android:id="@+id/recipe_add_edit_et_steps_remove"
                        android:layout_gravity="center_vertical"
                        android:layout_weight=".15"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="-"/>
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dp"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:textColor="@android:color/black"
                    android:paddingTop="10dp"
                    android:paddingLeft="15dp"
                    android:text="Instructions"
                    />
                <androidx.recyclerview.widget.RecyclerView
                    android:layout_marginBottom="16dp"
                    android:padding="8dp"
                    android:id="@+id/recipe_rv_instructions"
                    tools:listitem="@layout/list_item_recipe_instruction"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>
            </androidx.cardview.widget.CardView>


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</LinearLayout>



<!--



-->
